<resources>
    <string name="app_name">PTsafe</string>
    <string name="menu_home">home</string>
    <string name="menu_detect_crowding">detect crowding</string>
    <string name="menu_news">news</string>
    <string name="menu_emergency_call">emergency call</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="read_more">read more</string>
    <string name="add_news">add news</string>
    <string name="news_title">news title</string>
    <string name="news_label">news label</string>
    <string name="news_content">news content</string>
    <string name="image_url">image url</string>
    <string name="news_url">news url</string>
    <string name="comment_label">comments</string>
    <string name="add_comments">add comments</string>
    <string name="comment_title">comment title</string>
    <string name="comment_content">comment content</string>
    <string name="error_data_message">no comments available</string>
    <string name="welcome_crowding_message">welcome to the crowding detection section</string>
    <string name="welcome_crowding_content">
        As the crime rate is now increasing for approximately 24% per year in Victoria and is predominantly
        affects commuters in a crowded public transportations, it is better to check the crowdedness level
        on your surroundings.
    </string>
    <string name="welcome_meditation_content">
        Meditation helps to assist you if you are anxious in the crowds or after getting offended. Using light breathing, it helps you to ease your light uncomfortable feelings
        by series of short interval breathing. However, if you are heavily stressful, it would be better to use box interval breathing
        to take your mindset back to the reality.
    </string>
    <string name="welcome_home">Hello User!</string>
    <string name="take_photo">take a photo</string>
    <string name="back_menu">back to main menu</string>
    <string name="report_menu">report the crowd</string>
    <string name="instruction_label">Instruction according to the crowdedness level:</string>
    <string name="instruction_low_label">Instruction if you are facing a low crowded area</string>
    <string name="instruction_content">1. Never publicly check your valuables. \u000A2.Wear a crossbody purse where the straps lay diagonally across your body. \u000A3.Standby on our emergency call menu whenever possible.</string>
    <string name="instruction_low_content">1. Get off at well-lit and busy stops whenever possible. \u000A2.If you are getting off at a little-used stop, try to arrange for a friend to meet with you.\u000A3.do not doze off.</string>
    <string name="password_label">enter your password</string>
    <string name="login_label">login</string>
    <string name="add_trip_btn">add trip</string>
    <string-array name="news_tags">
        <item>all</item>
        <item>crime</item>
        <item>tech</item>
    </string-array>
    <string-array name="news_tags_without_all">
        <item>crime</item>
        <item>tech</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="in_out">
        <item>inbound</item>
        <item>outbound</item>
    </string-array>
    <string-array name="day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="carriage">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="historical_year">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_station">ViewStationActivity</string>
    <string name="crime_news_title">crime news near here</string>
    <string name="show_weekday_data">show historical chart</string>
    <string name="available_trains">available trains</string>
    <string name="level_of_crowdedness_report">level of crowdedness</string>
    <string name="direction_type_label">direction type</string>
    <string name="line_name_label">train name</string>
    <string name="route_name_label">station name</string>
    <string name="day_label">day</string>
    <string name="time_label">departure time</string>
    <string name="carriage_number_label">carriage number</string>
    <string name="criminal_activity_label">report unusual activities</string>
    <string name="crowdedness_report">report</string>
    <string name="list_carriage_title">list of carriages</string>
    <string name="recorded_crime_activities">recorded unusual activities</string>
    <string name="saved_trip_label">saved trips</string>
    <string name="find_a_station_label">find a station</string>
</resources>