<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/menu_detect_crowding"
        android:title="@string/menu_detect_crowding"/>
    <item
        android:id="@+id/menu_find_a_station"
        android:title="my trips"
        />
    <item
        android:id="@+id/menu_emergency_call"
        android:title="@string/menu_emergency_call"/>
    <item
        android:id="@+id/menu_news"
        android:title="@string/menu_news"/>
    <item
        android:id="@+id/menu_meditation"
        android:title="meditation"
        />
    <item
        android:id="@+id/user_manual"
        android:title="user manual"
        />
</menu>